11.3:
	deprecate bsdconv_codecs_list() by bsdconv_modules_list(), old symbol will be remained until next major release
	deprecate bsdconv_codec_check() by bsdconv_module_check(), old symbol will be remained until next major release
	add filter/{CYRILLIC,HANGUL,HIRAGANA,KATAKANA,KHMER,MAHJONG,PRINT,ROMAN,THAI}
	replace inter/ZH-STRINGS with inter/STRINGS which accepts filter

11.2:
	improve inter/{UPPER,LOWER} (include mapping in SpecialCasing.txt)
	add inter/CASEFOLD (C/F in CASEFOLD.txt)
	Update inter/SCORE, inter/SCORE_TRAIN, with manpages.
	Improve worst-case performance for inter/_NF-ORDER
	Unify map file structure on all platform
	add inter/REPLACE and alias inter/NOBOM to inter/REPLACE#01FEFF
	Update documentations
	support DESTDIR in makefile
	be case-sensitive for codec arguments (for bsdconv-opencc)
	update to/_CP950
	add from/_HKSCS{1999,2001,2004}
	add from/_BIG5{E,-2003,-ETEN}
	add inter/ZH-BONUS and inter/ZH-BONUS-PHRASE
	add filter infrastructure

11.1:
	Correct algorithm for unicode normalization

11.0:
	add man page for inter/AMBIGUOUS-PAD and inter/AMBIGUOUS-UNPAD
	add inter/{NFC,NFD,NFKC,NFKD} #UnicodeData
	improve inter/{UPPER,LOWER} #UnicodeData
	add inter/PASS
	add unified counter interface
	replace inter/ERROR with newly added inter/COUNT
	replace inter/SPLIT with newly added inter/INSERT
	support data list for codec argument

10.0:
	support "codec#key&key=value" style argument
	replace from/3f and from/sub with from/any
	replace to/3f with to/any
	replace to/UNICODE and to/ANSI-CONTROL with alias to to/PASS#MARK&FOR={UNICODE,1,ANSI,1B}
	replace from/SKIP with alias to from/PASS#UNMARK
	replace to/ASCII-ESCAPE-UNICODE with alias to ESCAPE#...
	replace to/ASCII-HEX-HTML-ENTITY with alias to ESCAPE#...
	add to/ASCII-DEC-HTML-ENTITY alias to ESCAPE#...
	deprecate bsdconv_duplicate()
	add bsdconv-man and some manpages
	add document
	API change for bsdconv_{insert,replace}_{phase,codec}

9.1:
	bash completion script (buggy)