@@ -3,6 +3,8 @@
 	deprecate bsdconv_codec_check() by bsdconv_module_check(), old symbol will be remained until next major release
 	add filter/{CYRILLIC,HANGUL,HIRAGANA,KATAKANA,KHMER,MAHJONG,PRINT,ROMAN,THAI}
 	replace inter/ZH-STRINGS with inter/STRINGS which accepts filter
+	add scorer infrastructure
+	add scorer/{CJK}
 
 11.2:
 	improve inter/{UPPER,LOWER} (include mapping in SpecialCasing.txt)
